--- a/config.json
+++ b/config.json
@@ -1,14 +1,8 @@
 [
   {
-    "preset": "cms",
-    "name": "Content Management System",
+    "preset": "fhir",
+    "name": "FHIR-HIS",
     "icon": "wysiwyg",
-    "description": "Headless CMS for blogs"
-  },
-  {
-    "preset": "e-commerce",
-    "name": "E-commerce",
-    "icon": "storefront",
-    "description": "A base schema for e-commerce website"
+    "description": "FHIR compliant Health Information System"
   }
 ]
